Network Settings: Show correct IPv6 address when loaded

This also shows 'Loading...' while the IPv6 address loads.

Bug: 800305
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1be348b8aa035caa5072efb54d5f1bc000dd1655
Reviewed-on: https://chromium-review.googlesource.com/858425
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528353}
Former-commit-id: 63708cf6e7487d80ac5dfbb9d50003dec29a61fe