chromeos/network/network_state_handler.cc
@@ -1263,8 +1263,10 @@ void NetworkStateHandler::UpdateIPConfigProperties(
     if (!default_network_path_.empty()) {
       const NetworkState* default_network =
           GetNetworkState(default_network_path_);
-      if (default_network && default_network->device_path() == path)
+      if (default_network && default_network->device_path() == path) {
+        NotifyNetworkPropertiesUpdated(default_network);
         NotifyDefaultNetworkChanged(default_network);
+      }
     }
   }
 }
